--- a/content/css/style.css
+++ b/content/css/style.css
@@ -34,8 +34,9 @@ div {
     height: 75vh;
 }
 
-img {
+.header img {
     border-radius: 5px;
+    margin: 0px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -47,17 +48,43 @@ h1, h2, h3, h4, h5, h6 {
     padding: 15px;
     margin-top: 0px;
     margin-bottom: 1px;
+    margin: 0px;
 }
 
 .title {
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
+.marioIdle img {
+    border: #000 5px solid;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
+    margin: 0px;
+    float: right;
 }
 
 p {
     padding: 5px;
     margin-top: 1px;
     font-size: larger;
+}
+
+.imgContainer {
+    display: flex;
+    justify-content: center;
+}
+
+.imgContainer img {
+    border-radius: 5px;
+    border: #000 5px solid;
+    margin: 0px;
+}
+
+.imgContainer > span {
+    padding: 5px;
 }
 
 .marioIdle {
