--- a/content/css/style.css
+++ b/content/css/style.css
@@ -34,11 +34,6 @@ div {
     height: 75vh;
 }
 
-.header img {
-    border-radius: 5px;
-    margin: 0px;
-}
-
 h1, h2, h3, h4, h5, h6 {
     font-family: SM64;
     text-align: center;
@@ -47,7 +42,7 @@ h1, h2, h3, h4, h5, h6 {
     border-radius: 5px;
     padding: 15px;
     margin-top: 0px;
-    margin-bottom: 1px;
+    margin-bottom: 0px;
     margin: 0px;
 }
 
@@ -57,43 +52,15 @@ h1, h2, h3, h4, h5, h6 {
     border-bottom-right-radius: 0px;
 }
 
-.marioIdle img {
-    border: #000 5px solid;
-    border-bottom-right-radius: 5px;
-    border-bottom-left-radius: 5px;
+.title2 {
     border-top-left-radius: 5px;
-    margin: 0px;
-    float: right;
+    border-top-right-radius: 5px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 5px;
 }
 
 p {
     padding: 5px;
     margin-top: 1px;
     font-size: larger;
-}
-
-.imgContainer {
-    display: flex;
-    justify-content: center;
-}
-
-.imgContainer img {
-    border-radius: 5px;
-    border: #000 5px solid;
-    margin: 0px;
-}
-
-.imgContainer > span {
-    padding: 5px;
-}
-
-.marioIdle {
-    float: right;
-}
-
-.peachCastle {
-    float: left;
-    border-radius: 5px;
-    padding-left: 5px;
-    padding-right:5px;
 }
